add bv, ae, na macro

--- a/2018-PetiteMigration/macros.tex
+++ b/2018-PetiteMigration/macros.tex
@@ -25,6 +25,9 @@
 \newcommand{\md}[1]{\bnote{MD}{#1}}
 \newcommand{\jr}[1]{\bnote{JRe}{#1}}
 \newcommand{\lf}[1]{\bnote{Luc}{#1}}
+\newcommand{\na}[1]{\bnote{Nic}{#1}}
+\newcommand{\an}[1]{\bnote{Anne}{#1}}
+\newcommand{\bv}[1]{\bnote{Benoit}{#1}}
 
 \graphicspath{{figures/}}
 %%% 
