Update file for my config (with et al in it)

--- a/2018-PetiteMigration/main.tex
+++ b/2018-PetiteMigration/main.tex
@@ -23,7 +23,7 @@
     \usepackage[numbers]{natbib}
 
 
-    \input{macros}
+    \input{../myConfig/macros}
 
     \author{
         \IEEEauthorblockN{Beno\^{i}t Verhaeghe$^{1,2}$, Anne Etien$^1$,\\ Nicolas Anquetil$^1$, St\'{e}phane Ducasse$^1$}\IEEEauthorblockA{$^1$Universit\'{e} de Lille, CNRS, Inria, \\ Centrale Lille, UMR 9189 -- CRIStAL, France\\}
@@ -397,7 +397,7 @@
     
     %\bibliographystyle{abbrv}
     %natbib 
-    \bibliographystyle{plainnat}
+    \bibliographystyle{../myConfig/myplainnat}
     \bibliography{references}
-    
+     
     \end{document}
