--- a/myConfig/macros.tex
+++ b/myConfig/macros.tex
@@ -7,9 +7,14 @@
     % \marginpar{\fbox{\bfseries\sffamily#1}}
    }
    \newcommand{\cvsversion}{\emph{\scriptsize$-$Id: macros.tex,v 1.1.1.1 2007/02/28 13:43:36 bergel Exp $-$}}
+   \newcommand{\paragraphDesc}[2]{
+    \textcolor{#1}{#2}
+   }
+   
   }
   {\newcommand{\bnote}[2]{}
    \newcommand{\cvsversion}{}
+   \newcommand{\paragraphDesc}[2]{}
   } 
 
 
@@ -28,6 +33,8 @@
 \newcommand{\na}[1]{\bnote{Nic}{#1}}
 \newcommand{\an}[1]{\bnote{Anne}{#1}}
 \newcommand{\bv}[1]{\bnote{Benoit}{#1}}
+
+\newcommand{\bvc}[1]{\paragraphDesc{blue}{#1}}
 
 \graphicspath{{figures/}}
 %%% 
