--- a/2018-PetiteMigration/main.tex
+++ b/2018-PetiteMigration/main.tex
@@ -205,8 +205,8 @@
     The solution we propose must respect some criteria:
     \begin{itemize}
         \item \emph{Source independence}. Our solution should be easy to adapt
-            for all project written in GWT using Java and for
-            application not written in Java but describing a GUI.
+            for all projects written in GWT using Java and for
+            applications not written in Java but describing a GUI.
         \item \emph{Target independence}. It has to be easy to change the target
             language without restructuring the metamodel we have defined or 
             change any stage of the migration.
