--- a/2018-PetiteMigration/references.bib
+++ b/2018-PetiteMigration/references.bib
@@ -238,3 +238,35 @@
   pages={49--54},
   year={2013}
 }
+
+
+@article{feldman1991availability,
+	title = {Availability of {F}2C—a {Fortran} to {C} {Converter}},
+	volume = {10},
+	issn = {1061-7264},
+	url = {http://doi.acm.org/10.1145/122006.122007},
+	doi = {10.1145/122006.122007},
+	abstract = {We have produced a program that automatically converts ANSI standard Fortran 77 [1] to C [8]. It has converted many Fortran programs without manual intervention; it is easily available --- free of charge (and of warranty) --- by electronic mail and ftp.},
+	number = {2},
+	urldate = {2018-05-22},
+	journal = {SIGPLAN Fortran Forum},
+	author = {Feldman, S. I. and Gay, D. M. and Maimone, M. W. and Schryer, N. L.},
+	month = jul,
+	year = {1991},
+	pages = {14--15},
+}
+
+
+@article{terwilliger2012automatic,
+	title = {Automatic {Fortran} to {C}++ conversion with {FABLE}},
+	volume = {7},
+	doi = {10.1186/1751-0473-7-5},
+	abstract = {In scientific computing, Fortran was the dominant implementation language throughout most of the second part of the 20th century. The many tools accumulated during this time have been difficult to integrate with modern software, which is now dominated by object-oriented languages. Driven by the requirements of a large-scale scientific software project, we have developed a Fortran to C++ source-to-source conversion tool named FABLE. This enables the continued development of new methods even while switching languages. We report the application of FABLE in three major projects and present detailed comparisons of Fortran and C++ runtime performances. Our experience suggests that most Fortran 77 codes can be converted with an effort that is minor (measured in days) compared to the original development time (often measured in years). With FABLE it is possible to reuse and evolve legacy work in modern object-oriented environments, in a portable and maintainable way. FABLE is available under a nonrestrictive open source license. In FABLE the analysis of the Fortran sources is separated from the generation of the C++ sources. Therefore parts of FABLE could be reused for other target languages.},
+	language = {en},
+	number = {5},
+	urldate = {2018-05-22},
+	journal = {Source Code for Biology and Medicine},
+	author = {Terwilliger, Thomas Charles and Sauter, Nicholas and Adams, Paul D},
+	month = may,
+	year = {2012},
+}
